css/styles.css
/* ... */
    .w-widget-twitter-count-shim {
      vertical-align: top;
      text-align: center;
      background: #fff;
      border: 1px solid #758696;
      border-radius: 3px;
      width: 28px;
      height: 20px;
      display: inline-block;
      position: relative;
    }

    .w-widget-twitter-count-shim * {
      pointer-events: none;
      -webkit-user-select: none;
      user-select: none;
    }

    .w-widget-twitter-count-shim .w-widget-twitter-count-inner {
      text-align: center;
      color: #999;
      font-family: serif;
      font-size: 15px;
      line-height: 12px;
      position: relative;
    }

    .w-widget-twitter-count-shim .w-widget-twitter-count-clear {
      display: block;
      position: relative;
    }

    .w-widget-twitter-count-shim.w--large {
      width: 36px;
      height: 28px;
    }

    .w-widget-twitter-count-shim.w--large .w-widget-twitter-count-inner {
      font-size: 18px;
      line-height: 18px;
    }

    .w-widget-twitter-count-shim:not(.w--vertical) {
      margin-left: 5px;
      margin-right: 8px;
    }

    .w-widget-twitter-count-shim:not(.w--vertical).w--large {
      margin-left: 6px;
    }

    .w-widget-twitter-count-shim:not(.w--vertical):before,
    .w-widget-twitter-count-shim:not(.w--vertical):after {
      content: " ";
      pointer-events: none;
      border: solid #0000;
      width: 0;
      height: 0;
      position: absolute;
      top: 50%;
      left: 0;
    }

    .w-widget-twitter-count-shim:not(.w--vertical):before {
      border-width: 4px;
      border-color: #75869600 #5d6c7b #75869600 #75869600;
      margin-top: -4px;
      margin-left: -9px;
    }

    .w-widget-twitter-count-shim:not(.w--vertical).w--large:before {
      border-width: 5px;
      margin-top: -5px;
      margin-left: -10px;
    }

    .w-widget-twitter-count-shim:not(.w--vertical):after {
      border-width: 4px;
      border-color: #fff0 #fff #fff0 #fff0;
      margin-top: -4px;
      margin-left: -8px;
    }

    .w-widget-twitter-count-shim:not(.w--vertical).w--large:after {
      border-width: 5px;
      margin-top: -5px;
      margin-left: -9px;
    }

    .w-widget-twitter-count-shim.w--vertical {
      width: 61px;
      height: 33px;
      margin-bottom: 8px;
    }

    .w-widget-twitter-count-shim.w--vertical:before,
    .w-widget-twitter-count-shim.w--vertical:after {
      content: " ";
      pointer-events: none;
      border: solid #0000;
      width: 0;
      height: 0;
      position: absolute;
      top: 100%;
      left: 50%;
    }

    .w-widget-twitter-count-shim.w--vertical:before {
      border-width: 5px;
      border-color: #5d6c7b #75869600 #75869600;
      margin-left: -5px;
    }

    .w-widget-twitter-count-shim.w--vertical:after {
      border-width: 4px;
      border-color: #fff #fff0 #fff0;
      margin-left: -4px;
    }

    .w-widget-twitter-count-shim.w--vertical .w-widget-twitter-count-inner {
      font-size: 18px;
      line-height: 22px;
    }

    .w-widget-twitter-count-shim.w--vertical.w--large {
      width: 76px;
    }

    .w-background-video {
      color: #fff;
      height: 500px;
      position: relative;
      overflow: hidden;
    }

    .w-background-video>video {
      object-fit: cover;
      z-index: -100;
      background-position: 50%;
      background-size: cover;
      width: 100%;
      height: 100%;
      margin: auto;
      position: absolute;
      inset: -100%;
    }

    .w-background-video>video::-webkit-media-controls-start-playback-button {
      -webkit-appearance: none;
      display: none !important;
    }

    .w-background-video--control {
      background-color: #0000;
      padding: 0;
      position: absolute;
      bottom: 1em;
      right: 1em;
    }

    .w-background-video--control>[hidden] {
      display: none !important;
    }

    .w-slider {
      text-align: center;
      clear: both;
      -webkit-tap-highlight-color: #0000;
      tap-highlight-color: #0000;
      background: #ddd;
      height: 300px;
      position: relative;
    }

    .w-slider-mask {
      z-index: 1;
      white-space: nowrap;
      height: 100%;
      display: block;
      position: relative;
      left: 0;
      right: 0;
      overflow: hidden;
    }

    .w-slide {
      vertical-align: top;
      white-space: normal;
      text-align: left;
      width: 100%;
      height: 100%;
      display: inline-block;
      position: relative;
    }

    .w-slider-nav {
      z-index: 2;
      text-align: center;
      -webkit-tap-highlight-color: #0000;
      tap-highlight-color: #0000;
      height: 40px;
      margin: auto;
      padding-top: 10px;
      position: absolute;
      inset: auto 0 0;
    }

    .w-slider-nav.w-round>div {
      border-radius: 100%;
    }

    .w-slider-nav.w-num>div {
      font-size: inherit;
      line-height: inherit;
      width: auto;
      height: auto;
      padding: .2em .5em;
    }

    .w-slider-nav.w-shadow>div {
      box-shadow: 0 0 3px #3336;
    }

    .w-slider-nav-invert {
      color: #fff;
    }

    .w-slider-nav-invert>div {
      background-color: #2226;
    }

    .w-slider-nav-invert>div.w-active {
      background-color: #222;
    }

    .w-slider-dot {
      cursor: pointer;
      background-color: #fff6;
      width: 1em;
      height: 1em;
      margin: 0 3px .5em;
      transition: background-color .1s, color .1s;
      display: inline-block;
      position: relative;
    }

    .w-slider-dot.w-active {
      background-color: #fff;
    }

    .w-slider-dot:focus {
      outline: none;
      box-shadow: 0 0 0 2px #fff;
    }

    .w-slider-dot:focus.w-active {
      box-shadow: none;
    }
/* ... */

